--- a/public/css/styles1.css
+++ b/public/css/styles1.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Numans');
 
     /* Remove the navbar's default rounded borders and increase the bottom margin */ 
     .navbar {
