--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Versatile Store</title>
@@ -11,8 +11,8 @@
 </head>
 <body>
 
-<div class="jumbotron">
-  <div class="container text-center">
+<div class="jumbotron" style="background-image: url('./images/BG.jpg');">
+  <div class="container text-center" style="color:aliceblue ">
     <h1>Versatile Store</h1>      
     <p>Mission, Vission & Values</p>
   </div>
